--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <section class="categoria">
+      <h2>filme e series </h2>
+      <div class="categoria-videos">
+        
+
+
+
+
 </body>
 
 </html>
