--- a/index.html
+++ b/index.html
@@ -2,31 +2,38 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css"/>
-    <title>aluraflix</title>
+  
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>Guiminamflix</title>
 
 </head>
 
 
 <body>
-    <div></div>
+    <div>
+         <section class="chamada">
+        <div class="chamada-texto">
+  
     <h1>Zé Vaqueiro, Wesley Safadão, NATTAN - DNA do Mato (Ao Vivo)</h1>
     <p#musica</?>
+  </div>
 
+  <div>  
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-WloA4ia7aI?si=8_R3d3zwbv1nuLqY"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div> 
+
    <section class="categoria">
       <h2>filme e series </h2>
-      <div class="categoria-videos">
+      <div class="categoria-videos"</div>
         
-
-
-
-
 </body>
 
 </html>
